try the BlazorServer Project buuild succedd 3 project

--- a/HybridDMS.Components/Pages/Todo.razor
+++ b/HybridDMS.Components/Pages/Todo.razor
@@ -2,7 +2,7 @@
 @rendermode Microsoft.AspNetCore.Components.Web.RenderMode.InteractiveServer
 
 
-@using HybridCisBCRM.Components.Data;
+@using HybridDMS.Components.Data;
 @using Microsoft.Maui.Networking
 @using System.Text.Json
 @inject TodoService TodoService
