Content Page To Tabbed Page. Success

--- a/HybridDMS.Components/Pages/Todo.razor
+++ b/HybridDMS.Components/Pages/Todo.razor
@@ -1,5 +1,5 @@
 ﻿@page "/todo"
-@rendermode Microsoft.AspNetCore.Components.Web.RenderMode.InteractiveServer
+@* @rendermode Microsoft.AspNetCore.Components.Web.RenderMode.InteractiveServer *@
 
 
 @using HybridDMS.Components.Data;
