--- a/HybridDMS/_Imports.razor
+++ b/HybridDMS/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.JSInterop
 @using HybridDMS
 @using HybridDMS.Components
+@using HybridDMS.Components.Data
+@using HybridDMS.Components.Pages
