--- a/HybridDMS/Components/Layout/NavMenu.razor
+++ b/HybridDMS/Components/Layout/NavMenu.razor
@@ -28,5 +28,10 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Todo
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="catalog">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Catalog
+            </NavLink>
+        </div>
     </nav>
 </div>
