Footer Northern Mountain Done

--- a/DMSBlazor/DMSBlazor/Components/_Imports.razor
+++ b/DMSBlazor/DMSBlazor/Components/_Imports.razor
@@ -9,4 +9,7 @@
 @using DMSBlazor
 @using DMSBlazor.Client
 @using DMSBlazor.Components
+@using DMSBlazor.Components.Services
 @using HybridDMS.Components.Pages
+@using HybridDMS.Components.Services
+@using HybridDMS.Components.Catalog
