--- a/HybridDMS/Components/Layout/NavMenu.razor
+++ b/HybridDMS/Components/Layout/NavMenu.razor
@@ -33,5 +33,10 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Catalog
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="oldcatalog">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> OldCatalog
+            </NavLink>
+        </div>
     </nav>
 </div>
