--- a/HybridDMS/_Imports.razor
+++ b/HybridDMS/_Imports.razor
@@ -2,6 +2,7 @@
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Sections
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
@@ -9,3 +10,4 @@
 @using HybridDMS.Components
 @using HybridDMS.Components.Data
 @using HybridDMS.Components.Pages
+@using HybridDMS.Components.Layout
