--- a/HybridDMS/_Imports.razor
+++ b/HybridDMS/_Imports.razor
@@ -11,3 +11,6 @@
 @using HybridDMS.Components.Data
 @using HybridDMS.Components.Pages
 @using HybridDMS.Components.Layout
+@using HybridDMS.Components.Catalog
+@using HybridDMS.Components.Item
+@using HybridDMS.Components.Services
