still running, But Already Added global setting

--- a/HybridDMS.Components/Catalog/CatalogListIProduct.razor
+++ b/HybridDMS.Components/Catalog/CatalogListIProduct.razor
@@ -1,8 +1,8 @@
-﻿@using HybridDMS.Components.Item
+﻿@using HybridDMS.Components.Product
 @inject IProductImageUrlProvider ProductImages
 
 <div class="catalog-item">
-    <a class="catalog-product" href="@ItemHelper.Url(Item)" data-enhance-nav="false">
+    <a class="catalog-product" href="@ProductHelper.Url(Item)" data-enhance-nav="false">
         <span class='catalog-product-image'>
             <img alt="@Item.Name" src='@ProductImages.GetProductImageUrl(Item)' />
         </span>
@@ -15,7 +15,7 @@
 
 @code {
     [Parameter, EditorRequired]
-    public required CatalogItem Item { get; set; }
+    public required CatalogProduct Item { get; set; }
 
     [Parameter]
     public bool IsLoggedIn { get; set; }
