--- a/HybridDMS.Components/Catalog/CatalogSearch.razor
+++ b/HybridDMS.Components/Catalog/CatalogSearch.razor
@@ -48,7 +48,7 @@
 
 @code {
     IEnumerable<CatalogBrand>? catalogBrands;
-    IEnumerable<CatalogItemType>? catalogItemTypes;
+    IEnumerable<CatalogProductType>? catalogItemTypes;
     [Parameter] public int? BrandId { get; set; }
     [Parameter] public int? ItemTypeId { get; set; }
 
