--- a/HybridDMS/_Imports.razor
+++ b/HybridDMS/_Imports.razor
@@ -12,5 +12,5 @@
 @using HybridDMS.Components.Pages
 @using HybridDMS.Components.Layout
 @using HybridDMS.Components.Catalog
-@using HybridDMS.Components.Item
+@using HybridDMS.Components.Product
 @using HybridDMS.Components.Services
