--- a/HybridDMS/Components/Pages/Catalog.razor
+++ b/HybridDMS/Components/Pages/Catalog.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @inject NavigationManager Nav
-@inject CatalogService CatalogService 
+@inject CatalogService CatalogService
 
 <HeaderBar />
 <PageTitle>Northern Mountains</PageTitle>
@@ -14,28 +14,28 @@
 
 <div class="catalog">
     @* <CatalogSearch BrandId="@BrandId" ItemTypeId="@ItemTypeId" /> *@
- 
+
     @if (catalogResult is null)
     {
         <p>Loading...</p>
     }
     @*    else
     {
-        <div>
-            <div class="catalog-items">
-                @foreach (var item in catalogResult.Data)
-                {
-                    <CatalogListItem Item="@item" />
-                }
-            </div>
+    <div>
+    <div class="catalog-items">
+    @foreach (var item in catalogResult.Data)
+    {
+    <CatalogListItem Item="@item" />
+    }
+    </div>
 
-            <div class="page-links">
-                @foreach (var pageIndex in GetVisiblePageIndexes(catalogResult))
-                {
-                    @* <NavLink ActiveClass="active-page" Match="@NavLinkMatch.All" href="@Nav.GetUriWithQueryParameter("page", pageIndex == 1 ? null : pageIndex)">@pageIndex</NavLink> *@
-                @* } *@
-            @* </div> *@
-        @* </div> *@
+    <div class="page-links">
+    @foreach (var pageIndex in GetVisiblePageIndexes(catalogResult))
+    {
+    @* <NavLink ActiveClass="active-page" Match="@NavLinkMatch.All" href="@Nav.GetUriWithQueryParameter("page", pageIndex == 1 ? null : pageIndex)">@pageIndex</NavLink> *@
+    @* } *@
+    @* </div> *@
+    @* </div> *@
     @* } *@
 </div>
 
@@ -81,6 +81,12 @@
             PageSize,
             BrandId,
             ProductTypeId);
+
+        catalogResult = await CatalogService.GetCatalogProducts(
+    Page.GetValueOrDefault(1) - 1,
+    PageSize,
+    BrandId,
+    ProductTypeId);
     }
 
 }
